# packageinstaller

./: .gitignore  CMakeLists.txt  Makefile  PKGBUILD  README.md  about.cpp  aptcache.cpp  aptcache.h  cachyos-packageinstaller.pro  cachyos-pi.desktop  cachyos-postinstall.desktop  cachyospi_locale.qrc  cmd.cpp  cmd.h  configure.sh  images.qrc  license.html  lockfile.cpp  lockfile.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mx-packageinstaller  mx-packageinstaller.desktop  mx-packageinstaller.pro  mx-packageinstaller_15.10.1mx15_i386.changes  mx-packageinstaller_15.10.2mx15_i386.changes  mx-packageinstaller_15.10.3mx15_i386.changes  mx-packageinstaller_15.10.4mx15_i386.changes  mx-packageinstaller_15.10.5mx15_amd64.changes  mx-packageinstaller_15.10.5mx15_i386.changes  mx-packageinstaller_15.10.6mx15_amd64.changes  mx-packageinstaller_15.10.6mx15_i386.changes  mx-packageinstaller_15.10.7mx15_amd64.changes  mx-packageinstaller_15.10.7mx15_i386.changes  mx-packageinstaller_15.10.8mx15_amd64.changes  mx-packageinstaller_15.10.8mx15_i386.changes  mx-packageinstaller_15.10.9mx15_amd64.changes  mx-packageinstaller_15.10.9mx15_i386.changes  (+122 more)
bm/: Audio-Audacity.bm  Audio-DeaDBeeF.bm  Audio-Guayadeque.bm  Audio-MOC.bm  Audio-MPD.bm  Audio-Pithos.bm  Audio-Pulseaudio.bm  Audio-audacious.bm  Audio-qmmp.bm  Audio-xmms.bm  Browser-Chromium.bm  Browser-Firefox.bm  Browser-Google-Chrome-stable.bm  Browser-Iceweasel.bm  Browser-Netsurf.bm  Browser-Opera.bm  Browser-Qupzilla.bm  Browser-iceweasel.bm  Children-Preschool.bm  Children-Primary.bm  Children-Scratch_Programming.bm  Children-Secondary.bm  Email-ClawsMail.bm  Email-Thunderbird.bm  FileManagers-PCManFM.bm  FileManagers-ROXFiler.bm  FileManagers-SpaceFM.bm  Games-Simple_Card_Puzzle.bm  Games-Super_Tux_Games.bm  Games-Super_Tux_Games_jessie_backports_version.bm  Graphics-Blender.bm  Graphics-Gimp_Basic.bm  Graphics-Gimp_Full.bm  Graphics-ImageMagik.bm  Graphics-Inkscape.bm  Graphics-Scribus.bm  Graphics-Shotwell.bm  Graphics-gscan2pdf.bm  Kernel-Debian_32bit_no_pae.bm  Kernel-Debian_32bit_no_pae.bm_only32bit  (+202 more)
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
debian/: .changelog.swp  changelog  control  copyright  install  rules
debs/: mx-packageinstaller_19.10.01_amd64.changes  mx-packageinstaller_19.10_amd64.changes  mx-packageinstaller_19.11_amd64.changes  mx-packageinstaller_19.4.1_amd64.changes  mx-packageinstaller_19.4.2_amd64.changes  mx-packageinstaller_19.7.1_amd64.changes  mx-packageinstaller_19.7.2_amd64.changes  mx-packageinstaller_19.7.3_amd64.changes  mx-packageinstaller_19.7_amd64.changes  mx-packageinstaller_19.8.1_amd64.changes  mx-packageinstaller_19.8.2_amd64.changes  mx-packageinstaller_19.8.4_amd64.changes  mx-packageinstaller_19.8.5_amd64.changes  mx-packageinstaller_19.8_amd64.changes  mx-packageinstaller_19.9_amd64.changes  mx-packageinstaller_20.11.01_amd64.changes  mx-packageinstaller_20.11.02_amd64.changes  mx-packageinstaller_20.12.01_amd64.changes  mx-packageinstaller_20.12_amd64.changes  mx-packageinstaller_20.1_amd64.changes  mx-packageinstaller_20.2_amd64.changes  mx-packageinstaller_20.3.1_amd64.changes  mx-packageinstaller_20.3_amd64.changes  mx-packageinstaller_20.4+nmu1_amd64.build  mx-packageinstaller_20.4+nmu1_amd64.buildinfo  mx-packageinstaller_20.4+nmu1_amd64.changes  mx-packageinstaller_20.4+nmu1_i386.build  mx-packageinstaller_20.4+nmu1_i386.buildinfo  mx-packageinstaller_20.4+nmu1_i386.changes  mx-packageinstaller_20.4+nmu2_amd64.build  mx-packageinstaller_20.4+nmu2_amd64.buildinfo  mx-packageinstaller_20.4+nmu2_amd64.changes  mx-packageinstaller_20.4+nmu2_i386.build  mx-packageinstaller_20.4+nmu2_i386.buildinfo  mx-packageinstaller_20.4+nmu2_i386.changes  mx-packageinstaller_20.4_amd64.changes  mx-packageinstaller_20.5_amd64.build  mx-packageinstaller_20.5_amd64.buildinfo  mx-packageinstaller_20.5_amd64.changes  mx-packageinstaller_20.5_i386.build  (+82 more)
help/: cachyos-pi.html  license.html  mx-package-installer.html
lang/: cachyos-packageinstaller_de.ts  cachyos-packageinstaller_pl.ts  cachyos-packageinstaller_ru.ts
pkglist/: apply.sh  audio.txt  browsers.txt  communication.txt  development.txt  games.txt  graphics.txt  input-method.txt  internet.txt  kernels.txt  mail.txt  multimedia.txt  office.txt  other.txt  pkgmngrs.txt  video.txt  virtualization.txt
src/: about.cpp  about.hpp  alpm_helper.cpp  alpm_helper.hpp  cachyos-pi  cachyos-pi-launcher  cmd.cpp  cmd.hpp  config.cpp  config.hpp  lockfile.cpp  lockfile.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  pacmancache.cpp  pacmancache.hpp  remotes.cpp  remotes.hpp  utils.cpp  utils.hpp  versionnumber.hpp
translations/: mx-packageinstaller_am.qm  mx-packageinstaller_am.ts  mx-packageinstaller_ar.ts  mx-packageinstaller_bg.ts  mx-packageinstaller_bn.ts  mx-packageinstaller_ca.qm  mx-packageinstaller_ca.ts  mx-packageinstaller_cs.qm  mx-packageinstaller_cs.ts  mx-packageinstaller_da.qm  mx-packageinstaller_da.ts  mx-packageinstaller_de.qm  mx-packageinstaller_de.ts  mx-packageinstaller_el.qm  mx-packageinstaller_el.ts  mx-packageinstaller_en.ts  mx-packageinstaller_es.qm  mx-packageinstaller_es.ts  mx-packageinstaller_es_ES.ts  mx-packageinstaller_et.ts  mx-packageinstaller_eu.ts  mx-packageinstaller_fa.ts  mx-packageinstaller_fi.qm  mx-packageinstaller_fi.ts  mx-packageinstaller_fil_PH.ts  mx-packageinstaller_fr.qm  mx-packageinstaller_fr.ts  mx-packageinstaller_fr_BE.ts  mx-packageinstaller_he_IL.ts  mx-packageinstaller_hi.qm  mx-packageinstaller_hi.ts  mx-packageinstaller_hr.qm  mx-packageinstaller_hr.ts  mx-packageinstaller_hu.qm  mx-packageinstaller_hu.ts  mx-packageinstaller_id.ts  mx-packageinstaller_is.qm  mx-packageinstaller_is.ts  mx-packageinstaller_it.qm  mx-packageinstaller_it.ts  (+39 more)
translations/qm/: mx-packageinstaller_el.qm  mx-packageinstaller_es.qm  mx-packageinstaller_fr.qm  mx-packageinstaller_ja.qm  mx-packageinstaller_sv.qm
translations/ts/: mx-packageinstaller_en.ts
